MB-41406: [BP] Fix data race on pausedPurgePoint

Backport of 9be2bcea http://review.couchbase.org/c/kv_engine/+/137026

BasicLinkedList::updateListElem may try to read pausedPurgePoint as
BasicLinkedList::purgeTombstones writes it.

As updateListElem holds the list write lock, purgeTombstones can
acquire that lock briefly while updating the iterator to avoid a race.

Change-Id: I55476b70385cb0a3bfe612965928bedc4e9fa54c
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/143878
Tested-by: Build Bot <build@couchbase.com>
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>